made the contact form bigger which also fixed some spacing issues

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -513,8 +513,8 @@ h1, h2, h3, .navbar {
 }
 
 .form-card {
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 50%;
     background-color: rgba(255,255,255,.1);
     display: flex;
     justify-content: center;
